# contests

./: .gitignore
sitewomen/: .env.example  README.md  db.sqlite3  pyproject.toml
sitewomen/auth/: admin.py
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/templates/: base.html
sitewomen/women/: admin.py  forms.py  generations_pdf.py  generations_word.py  models.py  urls.py  views.py
sitewomen/women/fixtures/: test_data.json
sitewomen/women/migrations/: 0001_initial.py  0002_remove_application_user.py  0003_application_user.py  0004_alter_application_user.py  0005_application_created_at.py  0006_alter_application_cover_and_more.py  0007_review.py  0008_applicationproxy.py  0009_contest_alter_application_cover_and_more.py  0010_remove_application_age_and_more.py
sitewomen/women/static/css/: style.css
sitewomen/women/templates/: application_detail.html  application_form.html  index.html  login.html  my_applications.html  register.html  success.html  Данные_проекта.html
sitewomen/women/templates/women/: application_detail.html  application_form.html  base.html  contest_detail.html  my_applications.html
women/: admin.py
