[project]
name = "sitewomen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "django-extensions>=3.2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "reportlab>=4.3.1",
    "uvicorn>=0.34.0",
]
